--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^3.0.0",
     "@astrojs/rss": "^3.0.0",
-    "astro": "^2.10.1"
+    "astro": "^2.10.1",
+    "preact": "^10.17.1"
   }
 }
